[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/UI/Buttons/play_button_down.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Buttons/play_button.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/StartScreen.gd" type="Script" id=3]
[ext_resource path="res://Sprites/UI/Buttons/controls_button.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Buttons/controls_button_down.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Buttons/controls_button_up.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/Buttons/settings_button_up.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/Buttons/play_button_up.png" type="Texture" id=8]
[ext_resource path="res://Sprites/UI/Buttons/settings_button.png" type="Texture" id=9]
[ext_resource path="res://Sprites/UI/Buttons/settings_button_down.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Game/Enviroment/Background.tscn" type="PackedScene" id=11]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;


uniform vec4 c1 : hint_color;
uniform vec4 c2 : hint_color;

uniform sampler2D pn1;
uniform sampler2D pn2;
uniform vec2 world_pos;
uniform vec2 scaling = vec2(1,1);
uniform vec2 world_scaling = vec2(1,1);

void fragment()
{
	vec3 color;
	float n1 = texture(pn1, scaling * (UV.xy + world_pos/world_scaling)).r;
	float n2 = texture(pn2, scaling * (UV.xy + world_pos/world_scaling)).r;
	n1 = smoothstep( 0.13, 1.0, (n1 + n2)/2.0);
	//color = vec3(n1);
	color = c1.rgb * n1 + c2.rgb * n2;
	
	COLOR = vec4(color, n1);
}"

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 2 )

[sub_resource type="OpenSimplexNoise" id=4]
seed = 1
period = 138.0
persistence = 0.229
lacunarity = 3.03

[sub_resource type="NoiseTexture" id=5]
seamless = true
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 1 )
shader_param/c1 = Color( 0.894118, 0.0470588, 0.0470588, 1 )
shader_param/c2 = Color( 0.207843, 0.215686, 0.686275, 1 )
shader_param/world_pos = Vector2( 479.372, 305.176 )
shader_param/scaling = Vector2( 1, 1 )
shader_param/world_scaling = Vector2( 100, 100 )
shader_param/pn1 = SubResource( 3 )
shader_param/pn2 = SubResource( 5 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.192157, 0.392157, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -27.5
margin_right = 58.0
margin_bottom = 27.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="Background/VBoxContainer"]
margin_right = 116.0
margin_bottom = 55.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="TextureButton" parent="Background/VBoxContainer"]
margin_top = 59.0
margin_right = 116.0
margin_bottom = 114.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="TextureButton" parent="Background/VBoxContainer"]
margin_top = 118.0
margin_right = 116.0
margin_bottom = 173.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 7 )

[node name="Background" parent="Background" instance=ExtResource( 11 )]
material = SubResource( 6 )
position = Vector2( 479.372, 305.176 )
scale = Vector2( 10.6082, 18.7027 )
[connection signal="button_up" from="Background/VBoxContainer/PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="Background/VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_button_up"]
[connection signal="button_up" from="Background/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_button_up"]
